--- a/htdocs/Authors.htm
+++ b/htdocs/Authors.htm
@@ -53,8 +53,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           that is superior to those in virtually any other any PC-based video 
           software product.</p>
       </blockquote>
-      <h2><br>
-        Mark Rejhon</h2>
+      <h2>Mark Rejhon</h2>
       <blockquote> 
         <p> 
           Mark authored the 3:2 pulldown algorithm that forms the basis of the 
@@ -64,8 +63,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           DScaler with his own changes to certain parts of the code, including improvements 
           to the deinterlacer modes.</p>
       </blockquote>
-      <h2><br>
-        Steve Grimm</h2>
+      <h2>Steve Grimm</h2>
       <blockquote> 
         <p>Steve is contributing enhancements to the deinterlacing modes including 
           better automatic switching between video mode and 3:2 pulldown mode, 
@@ -75,14 +73,12 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           algorithm. In addition, he is the author of the aspect ratio autodetection 
           code which was included in version 1.9.</p>
       </blockquote>
-      <h2><br>
-      Tom Barry</h2>
+      <h2>Tom Barry</h2>
       <blockquote>Tom contributed the triple buffering code and synchronization 
         fixes for version 2.0.0. Also, he has authored several MMX assembly optimizations 
         to the video deinterlace mode and added the advanced Brooktree/Conexant 
         chipset settings menu, both of which were included in version 1.9.</blockquote>
-      <h2> <br>
- Michael Samblanet</h2>
+      <h2>Michael Samblanet</h2>
       <blockquote> 
         <p>Michael is continuing to upgrade his aspect ratio control code.<br>
         </p>
