Added Always on top full screen flag for Gernot Updated some comments and documents

--- a/DScaler/Help/Authors.htm
+++ b/DScaler/Help/Authors.htm
@@ -44,7 +44,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 <!-- #BeginEditable "Text" --> 
       <h2>John Adcock</h2>
       <blockquote> 
-        <p>John is the founder of the project. He did huge amounts of full time 
+        <p>John is the founder and maintainer of the project. He did huge amounts of full time 
           development on versions 
           1.0 through 1.6 Beta 4. He did most of the work cleaning, translating 
           and legalizing Multidec. He put into code, the world's first open-source 
@@ -53,8 +53,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           that is superior to those in virtually any other any PC-based video 
           software product.</p>
       </blockquote>
-      <h2><br>
-        Mark Rejhon</h2>
+      <h2>Mark Rejhon</h2>
       <blockquote> 
         <p> 
           Mark authored the 3:2 pulldown algorithm that forms the basis of the 
@@ -64,8 +63,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           DScaler with his own changes to certain parts of the code, including improvements 
           to the deinterlacer modes.</p>
       </blockquote>
-      <h2><br>
-        Steve Grimm</h2>
+      <h2>Steve Grimm</h2>
       <blockquote> 
         <p>Steve is contributing enhancements to the deinterlacing modes including 
           better automatic switching between video mode and 3:2 pulldown mode, 
@@ -75,14 +73,12 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           algorithm. In addition, he is the author of the aspect ratio autodetection 
           code which was included in version 1.9.</p>
       </blockquote>
-      <h2><br>
-      Tom Barry</h2>
+      <h2>Tom Barry</h2>
       <blockquote>Tom contributed the triple buffering code and synchronization 
         fixes for version 2.0.0. Also, he has authored several MMX assembly optimizations 
         to the video deinterlace mode and added the advanced Brooktree/Conexant 
         chipset settings menu, both of which were included in version 1.9.</blockquote>
-      <h2> <br>
- Michael Samblanet</h2>
+      <h2>Michael Samblanet</h2>
       <blockquote> 
         <p>Michael is continuing to upgrade his aspect ratio control code.<br>
         </p>
@@ -96,7 +92,18 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         done from time to time.&nbsp; One of his several valuable contributions
         include a bug fix to make Macrovision-encoded sources watchable in DScaler,
         without purple-lines interference.</p>
-      <p>&nbsp;</p>
+      </blockquote>
+      <h2>Laurent Garnier</h2>
+      <blockquote>
+        <p>Despite having really no link with the french DJ, he's the latest one 
+          on the DScaler boat. French however, he coded the autodetection of WSS 
+          (WideScreen Signalling), improved a lot the OSD with various &quot;status 
+          screens&quot;. He also did the popup menu, per-format settings persistency. 
+          He's the second European coder, along with John Adcock.</p>
+      </blockquote>
+      <h2>Torbjörn Jansson</h2>
+      <blockquote>
+        <p>Added the new generic settings dialog and has provided many bug fixes</p>
       </blockquote>
       <p>Please see the <a href="Thanks.htm">Thanks</a> file for an incomplete 
         list of the many others who have contributed time and effort.</p>
