Updating help for version 3.0.0

--- a/DScaler/Help/Authors.htm
+++ b/DScaler/Help/Authors.htm
@@ -85,7 +85,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       </blockquote>
       <h2>Michael Eskin </h2>
       <blockquote>
-        <p>An engineer working at Conextant Systems Inc., the makers of the 8x8
+        <p>An engineer working at Conexant Systems Inc., the makers of the 8x8
         series chips that DScaler runs on.&nbsp; He basically meditates peace
         between the DScaler software and the 8x8 video capture hardware.&nbsp; When
         any of us fails on a nasty 8x8 issue, he takes over and gets the job
@@ -95,9 +95,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       </blockquote>
       <h2>Laurent Garnier</h2>
       <blockquote>
-        <p>Despite having really no link with the french DJ, he's the latest one 
-          on the DScaler boat. French however, he coded the autodetection of WSS 
-          (WideScreen Signalling), improved a lot the OSD with various &quot;status 
+        <p>Despite having really no link with the French DJ, he's the latest one 
+          on the DScaler boat. He coded the auto detection of WSS 
+          (WideScreen Signalling), improved the OSD with various &quot;status 
           screens&quot;. He also did the popup menu, per-format settings persistency. 
           He's the second European coder, along with John Adcock.</p>
       </blockquote>
