--- a/DScaler/Help/DScaler_Readme.htm
+++ b/DScaler/Help/DScaler_Readme.htm
@@ -40,32 +40,33 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <H1>DScaler - version 2.3.0</H1>
+      <H1>DScaler - version 3.0.0</H1>
       <P>What's new:<br>
-      &nbsp;&nbsp;&nbsp; Plug-in architecture<br>
-      &nbsp;&nbsp;&nbsp; Judder reduction<br>
-      &nbsp;&nbsp;&nbsp; New Greedy 2 Frame method (good for sports)<br>
-      &nbsp;&nbsp;&nbsp; Gamma filter<br>
-      &nbsp;&nbsp;&nbsp; Option to save settings per format/source<br>
-      &nbsp;&nbsp;&nbsp; WSS decoding for Pal and Secam sources<br>
-      &nbsp;&nbsp;&nbsp; Use of aspect ratio WSS data<br>
-      &nbsp;&nbsp;&nbsp; 3 screens of Information using OSD (general screen,
-      statistics screen and WSS data decoding screen)<br>
-      &nbsp;&nbsp;&nbsp; Autohide cursor feature<br>
-      &nbsp;&nbsp;&nbsp; Popup menu - right click in window<br>
-      &nbsp;&nbsp;&nbsp; New menu with direct access to all channels<br>
-      &nbsp;&nbsp;&nbsp; Command to go to the last viewed channel<br>
-      &nbsp;&nbsp;&nbsp; Single click replaced by double click to switch between
-      window mode and fullscreen mode<br>
-      &nbsp;&nbsp;&nbsp; >Option to save last used video
-      format per video input<br>
-      &nbsp;&nbsp;&nbsp; Zoom feature - still experimental<br>
-      &nbsp;&nbsp;&nbsp; Adjustable window position<br>
-      &nbsp;&nbsp;&nbsp; Orbiting &amp; Bounce<br>
-      &nbsp;&nbsp;&nbsp; CC support - experimental - lots of known problems<br>
-      &nbsp;&nbsp;&nbsp; Teletext support - experimental - lots of known
-      problems<br>
-      </font>
+      <font size="2">&nbsp;&nbsp; Massive improvements to 2:2 pulldown
+      detection.<br>
+      &nbsp;&nbsp; Improvements to 3:2 pulldown detection on material with bad
+      cadence.<br>
+      &nbsp;&nbsp; New mixer control for users not bypassing the PC with sound.<br>
+      &nbsp;&nbsp; Channel editing with fine tuning<br>
+      </font>&nbsp;&nbsp; <font size="2">New UI support for all most ini file
+      settings&nbsp;<br>
+      &nbsp;&nbsp; Greedy 2 frame improved (by fixing glaring bug).<br>
+      &nbsp;&nbsp; Overlay fixes.<br>
+      &nbsp;&nbsp; Improved auto-aspect ratio detect.<br>
+      &nbsp;&nbsp; Auto-format detection (switches between PAL and NTSC by
+      default)<br>
+      &nbsp;&nbsp; Updated Linear Correction Filter with alpha non-linear zoom
+      mode<br>
+      &nbsp;&nbsp; Improved Sound support<br>
+      &nbsp;&nbsp; Additional card support<br>
+      &nbsp;&nbsp; Teletext fixes (it's working pretty well on UK channels now)<br>
+      &nbsp;&nbsp; NTSC50 mode for Chris Williams<br>
+      &nbsp;&nbsp; Always on top full screen flag<br>
+      &nbsp;&nbsp; Gamma filter fixed<br>
+      </font>&nbsp;&nbsp; Various <font size="2">Bug Fixes<br>
+      &nbsp;&nbsp; French code page for teletext&nbsp;<br>
+      </font>&nbsp;&nbsp; <font size="2">More flexible zoom and positioning<br>
+      &nbsp;&nbsp; Alpha Logo Killer plug-in</font>
       </P>
       <H2>License:</H2>
       <P>This file is subject to the terms of the <A HREF=http://www.gnu.org/copyleft/gpl.html>GNU 
