--- a/DScaler/Help/user_support.htm
+++ b/DScaler/Help/user_support.htm
@@ -42,18 +42,19 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <tr> 
     <td colspan="3">
 <!-- #BeginEditable "Text" --> 
-      <p>Currently, most for DScaler is provided through the <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi">AVS 
+      <p>Currently, most for support DScaler is provided through the <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi">AVS 
         Home Theater PC Forum</a>, the largest such forum on the internet and 
         a great place to pick up information and advice. Please feel free 
         to stop by and say hello. You can post questions, bug reports, and suggestions 
         there. We suggest that you do a <a href="http://www.avsforum.com/ubbcgi/search.cgi?action=intro">search</a> 
-        of the forum to ensure that your question has not already been answered.</p>
-      <p>Support is given by the helpful members of the community, whether they 
+        of the forum to ensure that your question has not already been answered.
+      Bugs can also be posted <a href="http://sourceforge.net/bugs/?group_id=7420">at
+      SourceForge</a>,
+      this list should reflect the current known bugs.&nbsp; Please try to give
+      as much information as possible when describing your problem.</p>
+<p>Support at <a href="http://www.avsforum.com/ubbcgi/Ultimate.cgi">AVS</a> is given by the helpful members of the community, whether they 
         be involved in this project or not. However, some people that may appear 
         often to answer user questions and who are affiliated with project include:</p>
-      <p>Bugs can also be posted <a href="http://sourceforge.net/bugs/?group_id=7420">here</a>,
-      this list should reflect the current known bugs.&nbsp; Please try to give
-      as much information as possible when describing youe problem.</p>
       <p><u>User support<br>
         </u>
         Dan Schmelzer (dschmelzer), developer and user support;<br>
