Added TimeShift class.  Original Release.  Got record and playback code working.

--- a/DScaler/Help/FAQ.htm
+++ b/DScaler/Help/FAQ.htm
@@ -194,13 +194,8 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         computer.
       <p>
       <h2>Can I record video to my hard disk with DScaler?</h2>
-      <p> No. DScaler isn't an all-in-one desktop video utility.  The development
-        team has chosen to concentrate on making it the best video processor it can be,
-        and features like recording would require a lot of time and effort
-        we'd rather spend fine-tuning the deinterlacing algorithms or adding
-        new convenience features for aspect ratio control.
-      <p> If you want to record video, there are lots of alternatives to choose
-        from, such as:
+      <p> Yes!  DScaler now handles basic recording and playback of specifically-formatted AVI files using a compression codec of your choice.  The end goal being a "time shifting" feature (i.e. pausing of live TV) and not a generic video file processor.  In other words, it handles only the video files that it creates itself for this purpose.  This is all currently under construction.
+      <p> However, there are lots of alternatives to choose from for recording video, such as:
       <ul>
         <li> <a href="http://www.showshifter.com/">ShowShifter</a> for TiVo-like
           features such as an integrated program guide and pausing of live TV.
@@ -212,8 +207,11 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           post-process
           video.
       </ul>
-      <p> Of course, if you want to add video recording to DScaler, there's nothing
-        stopping you!  That's what open source is all about. 
+      <p> Keep in mind that DScaler isn't an all-in-one desktop video utility.  The development
+        team has chosen to concentrate primarily on making it the best video processor it can be,
+        and features like recording require a lot of time and effort
+        we'd rather spend fine-tuning the deinterlacing algorithms or adding
+        new convenience features for aspect ratio control.
       <h1>Hardware issues</h1>
       <h2>Can I use any vga card as a display device ?</h2>
       <p> Despite this statement from Mark Rejhon ;
