--- a/DScaler/Help/keyboard.htm
+++ b/DScaler/Help/keyboard.htm
@@ -216,9 +216,69 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </td>
   </tr>
 </table>
+
+<p><b>Audio Input Select</b></p>
+
+<table border="0">
+  <tr>
+    <td width="200">
+            <p><small>Mute</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>M</small></p>
+          </td>
+  </tr>
+  <tr>
+    <td width="200">
+            <p><small>Tuner</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Shift+F1</small></p>
+          </td>
+  </tr>
+  <tr>
+    <td width="200">
+            <p><small>MSP/Radio</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Shift+F2</small></p>
+          </td>
+  </tr>
+  <tr>
+    <td width="200">
+            <p><small>External</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Shift+F3</small></p>
+          </td>
+  </tr>
+  <tr>
+    <td width="200">
+            <p><small>Internal</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Shift+F4</small></p>
+          </td>
+  </tr>
+  <tr>
+    <td width="200">
+            <p><small>Disabled</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Shift+F5</small></p>
+          </td>
+  </tr>
+  <tr>
+    <td width="200">
+            <p><small>Stereo</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Ctrl+Shift+F6</small></p>
+          </td>
+  </tr>
+</table>
+
 <p><b>Video Format Select</b></p>
-
-
 
 <table border="0">
   <tr>
@@ -555,6 +615,73 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </td>
     <td valign="bottom">
             <p><small>Alt+9</small></p>
+          </td>
+  </tr>
+</table>
+<p><b>TimeShift</b></p>
+<table border="0">
+  <tr>
+    <td width="200">
+            <p><small>Record</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Shift+R</small></p>
+          </td>
+  </tr>
+  <tr>
+    <td width="200">
+            <p><small>Play</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Shift+P</small></p>
+          </td>
+  </tr>
+  <tr>
+    <td width="200">
+            <p><small>Pause</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>|</small></p>
+          </td>
+  </tr>
+  <tr>
+    <td width="200">
+            <p><small>Stop</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>Shift+S</small></p>
+          </td>
+  </tr>
+  <tr>
+    <td width="200">
+            <p><small>Fast Forward</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>}</small></p>
+          </td>
+  </tr>
+  <tr>
+    <td width="200">
+            <p><small>Fast Backward</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>{</small></p>
+          </td>
+  </tr>
+  <tr>
+    <td width="200">
+            <p><small>Next Video Clip</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>&gt;</small></p>
+          </td>
+  </tr>
+  <tr>
+    <td width="200">
+            <p><small>Previous Video Clip</small></p>
+          </td>
+    <td valign="bottom">
+            <p><small>&lt;</small></p>
           </td>
   </tr>
 </table>
