--- a/htdocs/portuguese/PortugueseFAQ.htm
+++ b/htdocs/portuguese/PortugueseFAQ.htm
@@ -3,7 +3,7 @@
 <!-- #BeginTemplate "/Templates/dtvnormal-multilang.dwt" --> 
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>DScaler - Foire Aux Questions</title>
+<title>DScaler - FAQ</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
