Added AVI height control, i.e. even/odd/averaged lines. Used existing cpu/mmx detection in TimeShift code.

--- a/DScaler/Help/IniFile.HTM
+++ b/DScaler/Help/IniFile.HTM
@@ -1145,6 +1145,18 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
           </td>
         </tr>
 
+        <tr>
+          <td> 
+            RecHeight
+          </td>
+          <td> 
+            <p align="center">1
+          </td>
+          <td> 
+            This index (between 0 and 3 inclusive) corresponds to the 4 radio check boxes in the TimeShift Options dialog.  It pertains to the desired height for recording video clips.  0 = full-height, 1 = 1/2-height even, 2 = 1/2-height odd, 3 = 1/2 height averaged.  Click the Help button on the dialog for more information.
+          </td>
+        </tr>
+
       </table>
 
 <h2 id="modes">Deinterlace Modes</h2>
