--- a/DScaler/Help/IniFile.HTM
+++ b/DScaler/Help/IniFile.HTM
@@ -849,20 +849,41 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         </tr>
         <tr> 
           <td> 
-            LuminanceThreshold
+            <a name="aspect.luminancethreshold">LuminanceThreshold</a>
           </td>
           <td> 
-            <p align="center">15
+            <p align="center">40
           </td>
           <td> 
             Controls how bright letterbox bars are allowed to get. Valid values 
-              are 0 through 127. Any pixel with lower luminance than this is considered 
+              are 0 through 127. Any pixel with lower luminance than this and a
+              chroma close to black (see
+              <a href="#aspect.chromarange">ChromaRange</a>) is considered 
               black by the aspect ratio detection code. Lowering this value will 
               allow DScaler to detect letterbox modes on darker scenes, at the cost 
               of increasing the chance that video noise in the letterbox bars 
               will be treated as part of the picture. <em>If all your letterboxed 
               material is from a clean signal source, you'll probably want to 
               lower this.</em>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a name="aspect.chromarange">ChromaRange</a>
+          </td>
+          <td>
+            <p align="center">16
+          </td>
+          <td>
+            Controls how non-black letterbox bars are allowed to get.  Valid
+              values are 0 through 127.  If the chroma of a pixel differs by
+              less than this amount from the "black" chroma value, and its
+              luminance is less than 
+              <a href="#aspect.luminancethreshold">LuminanceThreshold</a>,
+              it is considered black by the aspect ratio detection code.
+              Raising this value will increase the likelihood that dark parts
+              of a scene will be considered black, but will also increase
+              DScaler's ability to detect letterbox bars on noisy material.
           </td>
         </tr>
         <tr> 
