30/7 Yvonus . Corrected glitch due to "dumb" search and replace of dTV occurences.. ended up as as "Dscaler is the old name for Dscaler" :-) Renamed the "what is Dscaler" in "what is dTV" . Added the "what is dTV" part in the French version . Broken (internal to the site) link to the "Thanks" and "Authors"

--- a/htdocs/FAQ.htm
+++ b/htdocs/FAQ.htm
@@ -43,6 +43,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td colspan="3"> <!-- #BeginEditable "Text" --> 
+      <h1>&nbsp;</h1>
       <h1>Introduction</h1>
       <h2>What is DScaler ?</h2>
       <p> DScaler is a piece of software that grabs analog, interlaced video, 
@@ -68,11 +69,11 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       some people equipped with data capable projectors to feed them with progressive 
       scan images. 
       <p></p>
-      <h2>What is DScaler?</h2>
-      <p>DScaler is the old name for DScaler, we changed the name as people use 
-        DScaler to refer to digital television and this was causing confusion. 
-        In the source and on the website you will still see references to DScaler 
-        but please refer to the program as DScaler from now on. </p>
+      <h2>What is dTV ?</h2>
+      <p>dTV is the old name for DScaler, we changed the name as people use dTV 
+        to refer to digital television and this was causing confusion. In the 
+        source and on the website you will still see references to dTV but please 
+        refer to the program as DScaler from now on. </p>
       <h2>Who made what ?</h2>
       <p>See <a href="Authors.htm"> Authors</a> for the main contributors and 
         <a href="Thanks.htm">Thanks</a> for a list of people who have helped make 
