--- a/htdocs/francais/FAQ.htm
+++ b/htdocs/francais/FAQ.htm
@@ -73,9 +73,17 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         doubleur", de leur fournir une image progressive à partir d'une source 
         entrelacée. 
       <p> 
+      <h2>Qu'est ce que dTV ?</h2>
+      <p>dTV est l'ancien nom de DScaler. Nous avons chang&eacute; ce nom car 
+        il commencait &agrave; &ecirc;tre utilis&eacute; en r&eacute;f&eacute;rence 
+        &agrave; la t&eacute;l&eacute;vision num&eacute;rique (Digital TeleVision) 
+        et provoquait de la confusion dans les forums. Dans le code source et 
+        sur le site, vous trouverez encore certainement de veilles r&eacute;f&eacute;rences 
+        &agrave; l'ancien nom mais nous vous conseillons d'utiliser dor&eacute;navant 
+        ce nouveau nom. </p>
       <h2>Qui fait quoi ?</h2>
-      <p>Voyez le fichier <a href="Authors.htm">Auteurs</a> pour la liste des 
-        principaux d&eacute;veloppeurs ainsi que la liste des <a href="Thanks.htm">remerciements</a> 
+      <p>Voyez le fichier <a href="../Authors.htm">Auteurs</a> pour la liste des 
+        principaux d&eacute;veloppeurs ainsi que la liste des <a href="../Thanks.htm">remerciements</a> 
         pour quelques noms de personnes qui contribuent au succ&egrave;s de DScaler.</p>
       <h2>Combien co&ucirc;te DScaler ?</h2>
       <p>5000 FF (HT) :-) Non bien sur, DScaler est totalement gratuit, issue 
