--- a/htdocs/portuguese/PortugueseFAQ.htm
+++ b/htdocs/portuguese/PortugueseFAQ.htm
@@ -43,6 +43,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr> 
     <td colspan="3"><!-- #BeginEditable "Text" --> 
+      <h1>&nbsp;</h1>
       <h1>Introdução</h1>
       <h2>O que é o DScaler?</h2>
       <p>DScaler é um programa de captura 
